--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
     "firebase": "^7.17.1",
+    "ngx-cookie-service": "^10.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
