--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@tinymce/tinymce-angular": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
     "firebase": "^7.17.1",
